<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".page.home.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/kota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            tools:text="@string/kota"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_regular"/>

        <RelativeLayout
            android:id="@+id/cuaca"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_190sdp"
            android:layout_below="@+id/kota"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_ellipse">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleX="0.7"
                android:scaleY="0.7"
                tools:src="@drawable/sample" />

            <TextView
                android:id="@+id/suhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_45sdp"
                tools:text="@string/suhu"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                android:fontFamily="@font/montserrat_regular"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cuaca"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            tools:text="@string/desc"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_regular"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>